# outcomist

./: .cleanup-summary.md  .gitignore  .gitmodules  .v4.9-ship-summary.md  ARTIFACT_SPECIFICATION.md  ARTIFACT_SPEC_3FILES.md  BRIEF_PERFECTION_ROADMAP.md  BRIEF_README.md  BRIEF_TESTING_STRATEGY.md  BRIEF_V3.1_CHANGELOG.md  BRIEF_V3_CHANGELOG.md  Brief.md  CHANGELOG.md  DEMO_PHASE_1_AMPLIFIER.md  DEMO_PHASE_2_CLI.md  DEMO_PHASE_3_WEB_APP.md  DEMO_SCRIPT.md  DISCOVERY_SESSION_NOV3.md  MUST_HAVES.md  README.md  SYNC_ELIMINATION_PLAN.md  TEST_LOG_NOV3_OFFICE.md  TEST_LOG_NOV4_CLIENT_VS_PRODUCT.md  TEST_LOG_NOV4_FEATURE_DECISION.md  TEST_SCENARIO_9_REPORT.md  outcomist-manoj-test-11-7.txt  test-scenarios.md  test_shared_prompts.py
.devcontainer/: post-create.sh  (+2 more)
outcomist_web/: .gitignore  IMPLEMENTATION_SUMMARY.md  README.md  TESTING_REPORT.md  pyproject.toml  run.sh
outcomist_web/backend/: engine.py  main.py  models.py  prompts.py  routes.py  storage.py
outcomist_web/data/sessions/: 050bb55c-7897-4b9e-8811-b80f0c5afbd3.json  332f074e-412a-456a-918b-57fc93185baf.json  5202232d-11cb-4fbb-a24d-2c219b4dfb56.json  579fb6ba-fbc5-4f01-b4b5-d5f7c158be1a.json  60844b8f-140f-447a-9e3d-e458fb0531e2.json  68777c0f-3101-4f2e-b097-998f6591e713.json  69cf7263-7a0c-48da-8c19-c37815c1cf3c.json  6acdea48-0886-412a-a473-e6abd5098ef6.json  8b746836-c34f-425e-8dc0-e27b85504d23.json  a15dc46c-454a-435d-9cb3-6ae67e6fbabf.json  a7bea740-a69c-4417-a95e-e9f2137da7d2.json  (+4 more)
outcomist_web/frontend/: app.js  demo.html  icons.js  index.html  mockup-comparison.html  option-b-refined.html  styles.css
(+163 files in other folders)
